--- a/Project_Development_Phase/Application-building-Sprint-3/HTML PAGE _ FRONT END/about.html
+++ b/Project_Development_Phase/Application-building-Sprint-3/HTML PAGE _ FRONT END/about.html
@@ -64,7 +64,7 @@
 		</div>
 	</section>
     <div class="last-text">
-		<p>Developed with love by Tahmid Hamim © 2022</p>
+		<p>Developed with TEAM(PNT2022TMID48800) © 2022</p>
 	</div>
 
 	<!---scroll-top--->
