--- a/Project_Development_Phase/Application-building-Sprint-3/HTML PAGE _ FRONT END/index.html
+++ b/Project_Development_Phase/Application-building-Sprint-3/HTML PAGE _ FRONT END/index.html
@@ -40,7 +40,7 @@
 	</section>
 
 	<div class="last-text">
-		<p>Developed with love by Tahmid Hamim © 2022</p>
+		<p>Developed with TEAM(PNT2022TMID48800) © 2022</p>
 	</div>
 
 	<!---scroll-top--->
